// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VitalsForm > RTL snapshot tests > matches snapshot in LTR mode 1`] = `
<div>
  <div
    dir="ltr"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-weight"
        >
          weight
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-invalid="false"
            aria-label="weight"
            class="w-full rounded-xl border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-weight"
            max="500"
            min="0.5"
            placeholder="0"
            step="0.1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            unitKg
          </span>
        </div>
      </div>
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-height"
        >
          height
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-invalid="false"
            aria-label="height"
            class="w-full rounded-xl border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-height"
            max="300"
            min="20"
            placeholder="0"
            step="0.1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            unitCm
          </span>
        </div>
      </div>
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-systolic"
        >
          bloodPressure
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-invalid="false"
            aria-label="placeholderSys"
            class="w-full rounded-xl border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-systolic"
            max="300"
            min="40"
            placeholder="placeholderSys"
            step="1"
            type="number"
            value=""
          />
          <span
            class="text-lg font-bold text-muted-foreground"
          >
            /
          </span>
          <input
            aria-invalid="false"
            aria-label="placeholderDia"
            class="w-full rounded-xl border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-diastolic"
            max="200"
            min="20"
            placeholder="placeholderDia"
            step="1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            unitMmHg
          </span>
        </div>
      </div>
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-temperature"
        >
          temperature
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-invalid="false"
            aria-label="temperature"
            class="w-full rounded-xl border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-temperature"
            max="47"
            min="25"
            placeholder="36.5"
            step="0.1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            unitCelsius
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VitalsForm > RTL snapshot tests > matches snapshot in RTL mode 1`] = `
<div>
  <div
    dir="rtl"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-weight"
        >
          weight
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-invalid="false"
            aria-label="weight"
            class="w-full rounded-xl border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-weight"
            max="500"
            min="0.5"
            placeholder="0"
            step="0.1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            unitKg
          </span>
        </div>
      </div>
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-height"
        >
          height
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-invalid="false"
            aria-label="height"
            class="w-full rounded-xl border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-height"
            max="300"
            min="20"
            placeholder="0"
            step="0.1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            unitCm
          </span>
        </div>
      </div>
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-systolic"
        >
          bloodPressure
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-invalid="false"
            aria-label="placeholderSys"
            class="w-full rounded-xl border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-systolic"
            max="300"
            min="40"
            placeholder="placeholderSys"
            step="1"
            type="number"
            value=""
          />
          <span
            class="text-lg font-bold text-muted-foreground"
          >
            /
          </span>
          <input
            aria-invalid="false"
            aria-label="placeholderDia"
            class="w-full rounded-xl border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-diastolic"
            max="200"
            min="20"
            placeholder="placeholderDia"
            step="1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            unitMmHg
          </span>
        </div>
      </div>
      <div>
        <label
          class="mb-1 block text-sm font-semibold text-foreground"
          for="vital-temperature"
        >
          temperature
        </label>
        <div
          class="mt-1 flex items-center gap-3"
        >
          <input
            aria-invalid="false"
            aria-label="temperature"
            class="w-full rounded-xl border bg-background px-4 py-3 text-base text-foreground placeholder:text-muted-foreground transition-colors focus:outline-none focus:ring-2 border-border focus:border-primary focus:ring-ring"
            id="vital-temperature"
            max="47"
            min="25"
            placeholder="36.5"
            step="0.1"
            type="number"
            value=""
          />
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            unitCelsius
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
